--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -78,6 +78,15 @@
                 {% if  a.app_today.status.status  == 'Сохранена' or post  == 'Администратор' and a.app_today.status.status  == 'Подана' %}
                 <a href="{% url 'success_application' a.app_today.id %}" class="btn btn-outline-success  m-1" aria-current="page"><i class="fa-solid fa-check"></i></a>
                 {% endif %}
+                {% if user.username == 'admin' %}
+                <div class="dropup">
+                    <a class="btn m-1 dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">...</a>
+                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Действие</a></li>
+                        <li><a class="dropdown-item" href="#">Другое действие</a></li>
+                        <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+                      </ul>
+                </div>{% endif %}
 
             </div>
           </div>
