--- a/public_html/HelloDjango/templates/components/top_panel.html
+++ b/public_html/HelloDjango/templates/components/top_panel.html
@@ -10,7 +10,7 @@
         {% else %}
             <div class="btn-group">
                 <a href="{% url 'sign_in' %}" class="btn btn-primary active" aria-current="page">Вход</a>
-{#                <a href="{% url 'sign_up' %}" class="btn btn-primary">Регистрация</a>#}
+                <a href="{% url 'sign_up' %}" class="btn btn-primary">Регистрация</a>
             </div>
         {% endif %}
   </div>
