--- a/public_html/HelloDjango/templates/show_staff.html
+++ b/public_html/HelloDjango/templates/show_staff.html
@@ -50,7 +50,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-  <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Назад</a>
+  <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 
     <a href="/signup/" class="btn btn-outline-success active col-auto m-1" aria-current="page">Добавить сотрудника</a>
 </div>
