--- a/public_html/HelloDjango/templates/edit_staff.html
+++ b/public_html/HelloDjango/templates/edit_staff.html
@@ -5,7 +5,6 @@
 <div class="container-lg m-3 mx-auto w-75 p-3"  >
     <div class="card shadow-lg" style="background-color: rgba(247,247,248,0.71)">
       <div class="card-body">
-{#        <p class="card-text"> <b class="fs-5">Вес сотрудники </b> </p><hr>#}
       <div>
 
         <form id="edit_staff_form"  method="post">{% csrf_token %}
@@ -15,7 +14,7 @@
         </div>
         <div class="container-fluid row">
             <label>Пороль</label>
-            <input type="password" id="new_pass" hidden="" class="form-control col-1 w-50" name="new_password" value="">
+            <input type="password" id="new_pass" hidden="" class="form-control col-1 w-50" name="new_password" placeholder="Введите новый пороль" value="">
             <input type="password" id="old_pass" readonly required class="form-control col-1 w-50" name="old_password" value="{{ current_user.password }}">
             <button role="button" class="btn btn-outline-secondary col-auto m-1" id="change_pass">Изменить пороль</button>
         </div>
@@ -51,12 +50,7 @@
                         {% endfor %}
             </select>
         </div>
-
     </form>
-
-
-
-
       </div>
       </div>
     </div>
@@ -71,7 +65,7 @@
 
 {% block bottom_panel %}
 <div class="input-group d-flex justify-content-center align-items-center">
-  <a href="{% url 'show_staff' %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
+  <a href="{% url 'show_staff' %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Отмена</a>
   <a href="{% url 'del_staff' current_user.id %}" class="btn btn-outline-danger  col-auto m-1" aria-current="page">Удалить</a>
   <button form="edit_staff_form" type="submit" class="btn btn-success m-1">Сохранить</button>
 
