--- a/public_html/HelloDjango/templates/construction_sites.html
+++ b/public_html/HelloDjango/templates/construction_sites.html
@@ -40,7 +40,7 @@
 
 
 <div class="input-group d-flex justify-content-center align-items-center">
-  <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Назад</a>
+  <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page">Назад</a>
 
   <a href="{% url 'add_construction_sites'  %}" class="btn btn-success  col-auto m-1" aria-current="page"> Дабавить объект</a>
 </div>
