--- a/public_html/HelloDjango/templates/base.html
+++ b/public_html/HelloDjango/templates/base.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
     </head>
         {% load static %}
-    <body style="margin-bottom: 100px">
+    <body style="margin-bottom: 100px; margin-top: 100px;">
 
         {% include 'components/top_panel.html' %}
 
