fix: show_staff.html

--- a/public_html/HelloDjango/templates/show_staff.html
+++ b/public_html/HelloDjango/templates/show_staff.html
@@ -2,12 +2,8 @@
 
 {% block content %}
 
-<div class="container-lg m-3 mx-auto w-75 p-3"  >
-    <div class="card shadow-lg" style="background-color: rgba(247,247,248,0.71)">
-      <div class="card-body">
-        <p class="card-text"> <b class="fs-5">Вес сотрудники </b> </p><hr>
-      <div>
-
+<div class="container-sm m-3 mx-auto "  >
+        <p class="card-text ms-3"> <b class="fs-5">Вес сотрудники </b> </p>
         <table class="table table-bordered table-hover">
   <thead>
     <tr>
@@ -32,14 +28,6 @@
     {% endfor %}
   </tbody>
 </table>
-
-
-
-
-      </div>
-      </div>
-    </div>
-
 </div>
 
 {% endblock %}
