conflict correct add priority

--- a/public_html/HelloDjango/templates/conflict_correction.html
+++ b/public_html/HelloDjango/templates/conflict_correction.html
@@ -16,7 +16,7 @@
         <ul class="container-fluid" id="vehicle_list">
             {% for v in tech_app_list %}
                 <input type="hidden" value="{{ v.id }}" name="id_list"/>
-                <div class="row mb-3" >
+                <div class="row mb-4" >
 
 
                  <div class="input-group ">
@@ -45,38 +45,22 @@
                             return false;
                             "  >X
                     </button>
+
                 </div>
-                    <div class="form-floating">
-                    <textarea class="form-control app_description mt-2" name="description_{{ v.id }}" rows="1">{{ v.description }}</textarea>
-                    <label for="floatingInputValue" class="fw-bold ms-5">{{ v.app_for_day.construction_site.address }} ({{ v.app_for_day.construction_site.foreman.user.last_name }})</label>
+                      <div class="input-group form-floating ">
+                        <span class="input-group-text mt-2">
+                        <input type="number" id="priority_{{ v.id }}" name="priority_{{ v.id }}" class="  col-auto  " value="{{ v.priority }}" style="max-width: 50px; margin-left: -5px;"/></span>
+                        <textarea class="form-control app_description mt-2" aria-label="With textarea" id="floatingInputValue" name="description_{{ v.id }}" rows="1">{{ v.description }}</textarea>
+                        <label for="floatingInputValue" class="fw-bold " style="color: black; margin-left: 100px; margin-top: 0px">{{ v.app_for_day.construction_site.address }} ({{ v.app_for_day.construction_site.foreman.user.last_name }})</label>
                     </div>
                 </div>
+
+
+
             {% endfor %}
         </ul>
       </div>
     </div>
-
-
-
-{#    <div class="card shadow-lg mt-3" style="background-color: rgba(247,247,248,0.71)">#}
-{#      <div class="card-body">#}
-{##}
-{##}
-{##}
-{#        <p class="card-text">#}
-{#          <div class="container-fluid row">#}
-{#          <button role="button" class="btn btn-outline-primary col-auto position-absolute bottom-0 mb-3" onclick="location.href = '/conflict_resolution/{{ CH_DAY }}'; return false;">Отмена</button>#}
-{##}
-{#                <input form="conf_corr_form" class="btn btn-primary  col-auto position-absolute bottom-0 end-0 m-3" type="submit" value="Сохранить">#}
-{#          </div>#}
-{#        </p>#}
-{##}
-{##}
-{##}
-{#      </div>#}
-{#    </div>#}
-
-
   </form>
 </div>
 
@@ -90,9 +74,6 @@
 <div class="input-group d-flex justify-content-center align-items-center">
   <a href="{% url 'start_page'  %}" class="btn btn-outline-primary active  col-auto m-1" aria-current="page"><i class="fa-solid fa-list"></i> Все заявки</a>
     <a href="{% url 'conflict_resolution' CH_DAY  %}" class="btn btn-outline-primary active  col-auto ms-5" aria-current="page"> Отмена</a>
-{#    <button role="button" class="btn btn-outline-primary col-auto position-absolute bottom-0 mb-3" onclick="location.href = '/conflict_resolution/{{ CH_DAY }}'; return false;">Отмена</button>#}
-
-
   <input form="conf_corr_form" class="btn btn-success  col-auto m-1" type="submit" value="Сохранить">
 </div>
 {% endblock %}
