--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -16,6 +16,10 @@
 
 
             <li><a class="dropdown-item fw-bolder" href="{% url 'construction_sites' %}">Объекты</a></li>
+            <hr>
+            {% if user.username == 'admin' %}
+                    <li><a class="dropdown-item fw-bolder" href="{% url 'driver_app_list' CH_DAY %}">! Drivers</a></li>
+            {% endif %}
 
 
 
