--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -20,6 +20,7 @@
             <li><a class="dropdown-item fw-bolder" href="{% url 'driver_app_list' CH_DAY %}">! Drivers</a></li>
             {% if user.username == 'admin' %}
 
+                <li><a class="dropdown-item fw-bolder" href="{% url 'foreman_app_list' CH_DAY %}">Прорабы</a></li>
             {% endif %}
 
 
