--- a/public_html/HelloDjango/templates/base.html
+++ b/public_html/HelloDjango/templates/base.html
@@ -16,9 +16,11 @@
     <body style="margin-bottom: 100px; margin-top: 100px;">
 
         {% include 'components/top_panel.html' %}
+        <div class=" position-fixed start-50 top-0 translate-middle-x  " style="z-index: 100; margin-top: 60px;">
+            {% block indicator %}{% endblock %}
+        </div>
 
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
 
 
         <nav class="navbar fixed-bottom " style="min-height: 40px; background-color: rgba(52,58,64,0.89);">
