--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -19,7 +19,7 @@
             <hr>
             <li><a class="dropdown-item fw-bolder" href="{% url 'driver_app_list' CH_DAY %}">Водители</a></li>
             {% if user.username == 'admin' %}
-                <li><a class="dropdown-item fw-bolder" href="{% url 'foreman_app_list' CH_DAY %}">Прорабы</a></li>
+                <li><a class="dropdown-item fw-bolder" href="{% url 'foreman_app_list' CH_DAY %}">Статус заявок</a></li>
             {% endif %}
 
 
