user.is_authenticated

--- a/public_html/HelloDjango/templates/base.html
+++ b/public_html/HelloDjango/templates/base.html
@@ -18,7 +18,9 @@
         {% include 'components/top_panel.html' %}
         <div class=" position-fixed start-50 top-0 translate-middle-x  " style="z-index: 100; margin-top: 40px;">
             {% block indicator %}
+                {% if user.is_authenticated %}
                 <a href="{% url 'start_page' %}"  class="btn btn-sm btn-primary  " aria-current="page">На главную страницу</a>
+                {% endif %}
             {% endblock %}
         </div>
 
