fix: panel driver status

--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -116,21 +116,33 @@
     {% if post == 'Администратор' %}
     <div class="container  col-auto   position-fixed end-0 "style="margin-top: -70px; height: 90vh;">
         <div class="card-body  overflow-auto "style="height: 90%" >
-        {% for drv, t_name, count, attach_drv in DRV_LIST %}
+
+            {% for drv, count, attach_drv, tech_drv in DRV_LIST %}
             <ol class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-1 me-auto">
                   <div class="fw-bold small
                     {% if not drv.status %} text-danger
-                    {% elif count == 0 %} text-warning
+                    {% elif count == 0 %}
                     {% elif not count == 0 %} text-success
                     {% endif %}
                     ">{{drv.driver.user.last_name}}</div>
                     <div class=" small">
-                        {% if t_name %}
-                            {% for tech in t_name %}{{ tech.0 }}<br>{% endfor %}
-                            {% else %}{% for tech in attach_drv %}{{ tech.0 }}<br>{% endfor %}
+
+                        {% if tech_drv %}
+                            {% for tech in tech_drv %}
+                                {% if tech.status %}
+                                    {% if not count == 0 %}<div class="lh-sm text-success">{{ tech.technic.name.name }}</div>
+                                    {% else %}<div class="lh-sm">{{ tech.technic.name.name }}</div>
+                                    {% endif %}
+                                {% else %} <div class="lh-sm text-danger">{{ tech.technic.name.name }}</div>
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            {% for tech in attach_drv %}<div class="lh-sm text-danger">{{ tech.0 }}</div>{% endfor %}
                         {% endif %}
+
+
                     </div>
                 </div>
                 <span class="badge bg-primary rounded-pill"></span>
