--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -118,28 +118,28 @@
         <div class="card-body  overflow-auto "style="height: 90%" >
 
             {% for drv, count, attach_drv, tech_drv in DRV_LIST %}
-            <ol class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-1 me-auto">
+            <ol class="list-group" >
+                <li class="list-group-item d-flex justify-content-between align-items-start" >
+                <div class="" style="margin-left: -5px; margin-right: -10px;">
                   <div class="fw-bold small
                     {% if not drv.status %} text-danger
                     {% elif count == 0 %}
                     {% elif not count == 0 %} text-success
                     {% endif %}
                     ">{{drv.driver.user.last_name}}</div>
-                    <div class=" small">
+                    <div class=" small ">
 
                         {% if tech_drv %}
                             {% for tech in tech_drv %}
                                 {% if tech.status %}
-                                    {% if not count == 0 %}<div class="lh-sm text-success">{{ tech.technic.name.name }}</div>
-                                    {% else %}<div class="lh-sm">{{ tech.technic.name.name }}</div>
+                                    {% if not count == 0 %}<div class="lh-sm text-success text-truncate">{{ tech.technic.name.name }}</div>
+                                    {% else %}<div class="lh-sm text-truncate">{{ tech.technic.name.name }}</div>
                                     {% endif %}
-                                {% else %} <div class="lh-sm text-danger">{{ tech.technic.name.name }}</div>
+                                {% else %} <div class="lh-sm text-danger text-truncate">{{ tech.technic.name.name }}</div>
                                 {% endif %}
                             {% endfor %}
                         {% else %}
-                            {% for tech in attach_drv %}<div class="lh-sm text-danger">{{ tech.0 }}</div>{% endfor %}
+                            {% for tech in attach_drv %}<div class="lh-sm text-danger text-truncate">{{ tech.0 }}</div>{% endfor %}
                         {% endif %}
 
 
