--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -33,7 +33,7 @@
         </h3>
     </div>
     {% endblock %}
-<div class="container container-fluid row">
+<div class="container container-fluid mx-auto row">
     <div class="container mt-5 col-auto ">
         <div class="row">
         {% for a in today_applications_list %}
