--- a/public_html/HelloDjango/templates/technic_driver.html
+++ b/public_html/HelloDjango/templates/technic_driver.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-sm m-3 mx-auto p-3"  >
-    <div class="card shadow-lg" style="background-color: rgba(247,247,248,0.71)">
-      <div class="card-body">
-        <p class="card-text"> <b class="fs-5">Техника<br> на {{ DAY }}</b> </p>
+<div class="container-sm m-3 mx-auto "  >
+    <div class="" >
+      <div class="card-body row">
+        <p class="card-text col"> <b class="fs-5">Техника на<br>{{ DAY }}</b> </p>
         {% if CH_DAY == 'next_day' %}
-      <a href="{% url 'technic_driver' 'today' %}" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Сегодня</a>
+      <a href="{% url 'technic_driver' 'today' %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на сегодня</a>
         {% else %}
-          <a href="{% url 'technic_driver' 'next_day' %}" class="btn btn-outline-secondary  position-absolute top-0 end-0 m-3" aria-current="page">Следующий день</a>
+          <a href="{% url 'technic_driver' 'next_day' %}" class="col-auto btn btn-outline-secondary  position-absolute " style="margin-left: 200px;" aria-current="page">Список на следующий день</a>
       {% endif %}
 
 
