--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -9,10 +9,10 @@
             <hr>
             <li><a class="dropdown-item fw-bolder" href="{% url 'show_staff' %}">Персонал</a></li>
 
-            <li><a class="dropdown-item fw-bolder" href="{% url 'tabel_workday' 'currweek' %}">Табель(Рабочие дни)</a></li>
-            <li><a class="dropdown-item fw-bolder" href="{% url 'tabel_driver' CH_DAY %}">Табель(Водители)</a></li>
+            <li><a class="dropdown-item fw-bolder" href="{% url 'tabel_workday' 'currweek' %}">Табель (Рабочие дни)</a></li>
+            <li><a class="dropdown-item fw-bolder" href="{% url 'tabel_driver' CH_DAY %}">Табель (Водители)</a></li>
 
-            <li><a class="dropdown-item fw-bolder" href="{% url 'technic_driver' CH_DAY %}">Техника-Водитель</a></li>
+            <li><a class="dropdown-item fw-bolder" href="{% url 'technic_driver' CH_DAY %}">Табель (Техника)</a></li>
 
 
             <li><a class="dropdown-item fw-bolder" href="{% url 'construction_sites' %}">Объекты</a></li>
