--- a/public_html/HelloDjango/templates/show_staff.html
+++ b/public_html/HelloDjango/templates/show_staff.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container-sm m-3 mx-auto "  >
-        <p class="card-text ms-3"> <b class="fs-5">Вес сотрудники </b> </p>
+        <p class="card-text ms-3"> <b class="fs-5">Все сотрудники </b> </p>
         <table class="table table-bordered table-hover">
   <thead>
     <tr>
