--- a/public_html/HelloDjango/templates/edit_staff.html
+++ b/public_html/HelloDjango/templates/edit_staff.html
@@ -29,7 +29,7 @@
 
         <div>
             <label>Телефон</label>
-            <input type="text"  class="form-control" name="telephone" value="{{ current_user.telephone }}">
+            <input type="text"  class="form-control" name="telephone" value="{{ current_post.telephone }}">
         </div>
 
         <div class="mt-3">
