add col lastlogin

--- a/public_html/HelloDjango/templates/show_staff.html
+++ b/public_html/HelloDjango/templates/show_staff.html
@@ -13,6 +13,7 @@
       <th scope="col">Имя</th>
       <th scope="col">Должность</th>
       <th scope="col">Телефон</th>
+      <th scope="col">Последний вход</th>
     </tr>
   </thead>
   <tbody>{% for user, post, tel in user_post %}
@@ -24,6 +25,7 @@
       <td>{{ user.first_name }}</td>
       <td>{{ post }}</td>
       <td>{{ tel.telephone }}</td>
+      <td>{{ user.last_login }}</td>
     </tr>
     {% endfor %}
   </tbody>
