add func for mechanic

--- a/public_html/HelloDjango/templates/components/user_menu.html
+++ b/public_html/HelloDjango/templates/components/user_menu.html
@@ -49,9 +49,9 @@
 
         <hr>
 
-        <li><a class="dropdown-item" href="{% url 'show_today_applications' CH_DAY  %}">Заявки на {{ DAY }}</a></li>
+{#        <li><a class="dropdown-item" href="{% url 'show_today_applications' CH_DAY  %}">Заявки на {{ DAY }}</a></li>#}
 
-        <hr>
+{#        <hr>#}
         <li><a class="dropdown-item" href="{% url 'logout' %}">Выйти</a></li>
     </ul>
 </div>
