--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -118,7 +118,7 @@
     </div>
 
     {% if post == 'Администратор' %}
-    <div class="driver_panel container  col-auto   position-fixed end-0 "style="margin-top: -70px; height: 90vh;">
+    <div class="driver_panel container col-auto   position-fixed end-0 "style="margin-top: -70px; height: 90vh;" {% if var_drv_panel.value == user.id|slugify and var_drv_panel.flag %} hidden="" {% endif %}>
         <div class="card-body  overflow-auto "style="height: 90%" >
 
             {% for drv, count, attach_drv, tech_drv in DRV_LIST %}
